-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.1
-
None
checking for updates progress bar at the bottom right corner never appears. It increases to 100% as expected, but then remains at 100%, though Maintenance Tool is completed or interrupted. I would expect the indicator to disappear at some point.
In the screenshot, the first update was used to install some updates. In the second check, the previous one did not disappear.
For Gerrit Dashboard: QTCREATORBUG-28236 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
436445,2 | UpdateInfo: Ignore multiple update check requests | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |