UpdateInfo: Ignore multiple update check requests

The existing code would kill the currently running process, but

- It's unclear why it should do that. If the user wants to cancel the
  currently running one, they can do that in any case.
- The existing code killed the current maintenancetool, but did not
  cancel the task in the progress manager.

Task-number: QTCREATORBUG-28236
Change-Id: I06c2d6b733d637e38cae120dc1a375f7952bfa85
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>